# yamplayer-classic

./: .gitignore  README.md  yamplayer.code-workspace
.circleci/: config.yml
frontend/: .eslintrc.json  .gitignore  .prettierrc.json  README.md  craco-css-sourcemaps.js  craco.config.js  linaria.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.scss  App.tsx  Model.ts  js-libraries.d.ts  styling.ts  ui-state.ts  websocket.ts
frontend/src/backend/: Library.ts  Playback.ts  ServerApi.ts  backend.ts
frontend/src/components/: A.tsx  PlayerProgress.tsx  TrackTable.tsx  common.tsx  links.tsx  search.tsx
frontend/src/elements/: index.tsx  theme.ts
server/: Cargo.toml  README.md  diesel.toml
server/migrations/2019-11-07-214822_init/: down.sql  up.sql
server/migrations/2019-11-16-000139_externals/: down.sql  up.sql
server/src/: api.rs  bootstrap.rs  deezer_client.rs  errors.rs  file_completions.rs  http.rs  ids.rs  lib.rs  library.rs  main.rs  model.rs  playback.rs  player.rs  queue.rs  serde.rs  server.rs  services.rs  websocket.rs
server/src/api/: search.rs
server/src/deezer/: client.rs  types.rs
server/src/file_formats/: flac.rs  mod.rs  mp3.rs
