[package]
name = "server"
version = "0.1.0"
authors = ["robeady <robertj.eady@gmail.com>"]
edition = "2018"

[dependencies]
rodio = "0.9.0"
actix-web = "1.0.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.9"
serde_derive = "1.0"
log = "0.4.6"
env_logger = "0.6.2"
parking_lot = "0.8.0"
claxon = "0.4.2"

