[package]
name = "server"
version = "0.1.0"
authors = ["robeady <robertj.eady@gmail.com>"]
edition = "2018"

[dependencies]
rodio = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.6"
parking_lot = "0.8"
claxon = "0.4"
http = "0.1"
crossbeam = "0.7"
warp = "0.1"
futures = "0.1"
slotmap = "0.2.1"
tokio = "0.1"
tokio-threadpool = "0.1"
