[package]
name = "yamplayer"
version = "0.1.0"
authors = ["robeady <robertj.eady@gmail.com>"]
edition = "2018"

[dependencies]
rodio = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.6"
parking_lot = "0.8"
claxon = "0.4"
http = "0.1"
crossbeam = "0.7"
warp = "0.1"
futures = "0.1"
slotmap = "0.2.1"
tokio = "0.1"
tokio-threadpool = "0.1"
id3 = "0.3.0"
cpal = "0.10"
minimp3 = "0.3.2"
reqwest = "0.9.20"
url = { version = "2.1.0", features = ["serde"] }
chrono = { version= "0.4.9", features = ["serde"] }
fstrings = "0.1.4"
anyhow = "1.0.15"
thread_local = "1.0.0"
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
diesel = { version = "1.4.3", features = ["sqlite"] }
diesel_migrations = "1.4.0"
